vitrail-pg-macros/tests/ui/fail/query_without_variables.stderr
error[E0271]: type mismatch resolving `<UserById as QueryModel>::Variables == ()`
  --> tests/ui/fail/query_without_variables.rs:32:42
   |
32 |     let _ = crate::query_schema::query::<UserById>();
   |                                          ^^^^^^^^ type mismatch resolving `<UserById as QueryModel>::Variables == ()`
   |
note: expected this to be `()`
  --> tests/ui/fail/query_without_variables.rs:23:17
   |
23 |     variables = UserByIdVariables,
   |                 ^^^^^^^^^^^^^^^^^
note: required by a bound in `query_schema::query`
  --> tests/ui/fail/query_without_variables.rs:5:1
   |
 5 | / schema! {
 6 | |     name query_schema
 7 | |
 8 | |     model user {
...  |
12 | | }
   | |_^ required by this bound in `query`
   = note: this error originates in the macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)
